--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -11,14 +11,15 @@ body {
 }
 
 .bet {
-
+	width: 80%;
+	margin: 40px auto;
 	text-align: center;
-	font-family: sans-serif;
-	width: 100%;
-	margin: 20px auto;
 	border-radius: 10px;
-	box-shadow: 0px 0px 6px -1px rgba(10, 10, 10, 1);
-	background-color: #33cc33
+	font-size: 1.75em;
+	padding: 3px;
+
+	box-shadow: 0px 3px 3px -1px rgba(0, 0, 0, 0.75);
+	background-color: #efebe9;
 }
 
 .text {
@@ -52,7 +53,7 @@ body {
 }
 
 .container .image {
-	width: 50%;
+	width: 75%;
 }
 
 header {
