--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1,3 +1,16 @@
 {
+	box-sizing: border-box;
+}
 
+html, body {
+	width: 100%;
+	height: 100%;
+	padding: 0px;
+	margin: 0px;
+}
+
+.container {
+	width: 100%;
+	height: 100%;
+	background: red;
 }
