--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -10,7 +10,24 @@ html, body {
 }
 
 .container {
+	display: flex;
 	width: 100%;
 	height: 100%;
-	background: red;
+}
+
+.item {
+	height: 200px;
+	width: 200px;
+}
+
+.item.uno {
+	background: orangered;
+}
+
+.item.dos {
+	background: greenyellow;
+}
+
+.item.tres {
+	background: blue;
 }
