--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1,33 +1,43 @@
-{
-	box-sizing: border-box;
-}
-
-html, body {
-	width: 100%;
-	height: 100%;
-	padding: 0px;
+html, body, .container {
+    	height: 100%;
+    	background-color: white;
 	margin: 0px;
+	padding: 0px;
 }
 
 .container {
-	display: flex;
-	width: 100%;
-	height: 100%;
+    	display: flex;
+    	flex-direction: column;       
+    	/* flex-wrap: wrap; */
 }
 
-.item {
-	height: 200px;
-	width: 200px;
+.container div {                   
+    	margin: 4px;
+    	flex: 1;
+    	background-color: #DC143C;
 }
 
-.item.uno {
-	background: orangered;
+.container > div:first-child { }
+
+.container > div:nth-child(2) {
+    	display: flex;
+    	background-color: white;
 }
 
-.item.dos {
-	background: greenyellow;
+.container > div:nth-child(2) > div:first-child {
+    	display: flex;
+    	flex-direction: column;
+    	background-color: white;
+    	margin-right: 5px;
 }
 
-.item.tres {
-	background: blue;
+.container > div:nth-child(2) div {
+    	flex: 1;
+    	margin: 0;
 }
+
+.container > div:nth-child(2) > div:first-child > div:first-child {
+    	margin-bottom: 5px;
+}
+
+.container > div:last-child { }
