--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -2,21 +2,24 @@ html,
 body {
 	padding: 0;
 	margin: 0;
+	height: 100%;
 	font-family: arial, sans-serif;
 }
 
 .grid-container {
-	border: solid 4px #000;
+	/*border: solid 4px #000;*/
+	width: 100%;
+	height: 100%;
     display: inline-grid;
-    grid-template-columns: 10em 6em 6em 6em;
-    grid-template-rows: 6em 6em;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 10% 50% 20% 20%;
     grid-auto-flow: column;
 }
 
 .grid-item {
 	color: #fff;
     box-sizing: border-box;
-	font-size: 1.2em;
+	font-size: 0.8em;
 	padding: 1em;
     overflow: hidden;
 	text-align: center;
@@ -24,14 +27,16 @@ body {
 
 .grid-item-01 {
     background-color: #A62E5C;
+   grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
 }
 
 .grid-item-02 {
 	background-color: #9BC850;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
+	
+    
 }
 
 .grid-item-03 {
@@ -40,10 +45,18 @@ body {
 
 .grid-item-04 {
 	background-color: #2A9FBC;
+   grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 3;
 }
 
 .grid-item-05 {
 	background-color: #F15B2A;
+	grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 4;
 }
 
 .grid-item-06 {
