full integration template and before...

--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -34,15 +34,18 @@ body {
 }
 
 .grid-item-02 {
-	background-color: #9BC850;
-	
-    
+	background-color: #9BC850;   
 }
-
+.grid-item-02 .image {
+	width: 25%;
+}
 .grid-item-03 {
 	background-color: #675BA7;
 }
 
+.grid-item-03 .image {
+	width: 25%;
+}
 .grid-item-04 {
 	background-color: #2A9FBC;
    grid-column-start: 1;
@@ -52,22 +55,22 @@ body {
 }
 
 .grid-item-05 {
+	padding: 0px;
+	margin:  0px;
 	background-color: #F15B2A;
 	grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 4;
 }
 
 .grid-item-06 {
+	padding: 0px;
+	margin:  0px;
 	background-color: #675BA7;
-}
-
-.grid-item-07 {
-	background-color: #A62E5C;
 }
 
 .grid-item strong {
 	display: block;
-	font-size: 130%;  
+	font-size: 150%;  
 }	
