--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -18,7 +18,8 @@ body {
 }
 
 .grid-item {
-	color: #fff;
+	/*color: #fff;*/
+	font-color: #A62E5C
     box-sizing: border-box;
 	font-size: 0.8em;
 	padding: 1em;
@@ -27,43 +28,49 @@ body {
 }
 
 .grid-item-01 {
-    background-color: #A62E5C;
+     background-color: #C7A693;
+	border-radius: 25px;
    grid-column: 1 / 4;
     grid-row: 1 / 2;
 }
 
  .grid-item-02 {
-	background-color: #9BC850;   
+	background-color: #C2D4D8;  
+	border-radius: 15px 70px;
+	margin: 1em;
    grid-column: 1 / 2;
     grid-row: 2 / 4;
 }
 
  .grid-item-03 {
-	background-color: #27AE60;   
+	/*background-color: #27AE60;   */
 	grid-column: 2 / 3;
 	grid-row: 2 / 3;
 }
 
  .grid-item-04 {
-	background-color: #7F8C8D;   
+	background-color: #B0AAC2;  
+	border-radius: 70px 15px;
+	margin: 1em;
 	grid-column: 3 / 4;
 	grid-row: 2 / 4;
 }
 
  .grid-item-05 {
-	background-color: #2C3E50;   
+
 	grid-column: 2 / 3;
 	grid-row: 3 / 4;
 }
 
  .grid-item-06 {
-	background-color: #2980B9;   
+	background-color: #856046; 
+	border-radius: 25px;
 	grid-column: 1 / 4;
 	grid-row: 4 / 5;
 }
 
  .grid-item-07 {
-	background-color: #F39C12;   
+	/*background-color: #F39C12;   */
 	grid-column: 1 / 4;
 	grid-row: 5 / 6;
 }
